--- a/style.css
+++ b/style.css
@@ -11,11 +11,8 @@ button{
     border-radius: 25px;
     border-width: 3px;
     border-color: black;
-    box-shadow: 4px 5px;
-}
-
-button:hover{
-    box-shadow: 4px 4px;
+    box-shadow: 6px 6px;
+    cursor: pointer;
 }
 
 .nav{
@@ -195,4 +192,17 @@ body{
     background-color: rgb(72, 204, 198);
     width: 200px;
 }
+.Y{
+    width: 575px;
+    background-color: rgb(160, 220, 20);
+}
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
+button:hover{
+    box-shadow: 4px 4px;
+}
+  
